--- a/src/Components/Sidebar.css
+++ b/src/Components/Sidebar.css
@@ -14,10 +14,7 @@
     border-radius: 40px;
     background: #fff4f5;
     color: #b22d31 !important;
-
     padding: 4px 10px !important;
-
-    
 
     margin: 0px 10px;
    height: 35px;
@@ -202,6 +199,29 @@ a.nav-link {
     font-weight: bold;
     text-align: center;
   }
+
+  .sign_up .defaultButtonsa {
+    margin-left: 25%;
+  margin-bottom: 20px;
+  margin-top: 20px;
+  cursor: pointer;
+  height: 50px;
+  width: 70%;
+  border: #B22D31;
+  background: #B22D31;
+  border-radius: 39px;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 19px;
+  color: #FFFFFF;;
+    }
+    
+   .sign_up .defaultButtonsa:disabled {
+      cursor: not-allowed;
+    }
+   
   @media only screen and (max-width: 600px) {
 
   .nav-link {
@@ -319,7 +339,23 @@ a.nav-link {
         top: 0;
     }
 
-   
+    .sign_up .defaultButtonsa {
+        margin-left: 18%;
+      margin-bottom: 10px;
+      margin-top: 15px;
+      cursor: pointer;
+      height: 30px;
+      width: 150px;
+      border: #B22D31;
+      background: #B22D31;
+      border-radius: 20px;
+      font-family: 'Inter';
+      font-style: normal;
+      font-weight: 700;
+      font-size: 15px;
+      line-height: 19px;
+      color: #FFFFFF;;
+        }
 
     nav .fa-search:focus {
         color: #b22d31;
