--- a/src/Pages/SignUp.css
+++ b/src/Pages/SignUp.css
@@ -8,7 +8,7 @@
   padding: 5px;
   }
   
- .sign_up  p {
+ .sign_up .msgs {
     font-size: 14px;
         color: #B22D31;
         margin-top: 10px;
@@ -34,14 +34,15 @@
   padding: 3% 8% ;
   }
   
- .sign_up p {
+ .sign_up .msgs {
     font-size: 14px;
         color: #B22D31;
         margin-left: 40%;
+        font-weight: 700 !important;
   }
   
- .sign_up .defaultButton {
-  margin-left: 30%;
+ .sign_up .defaultButtons {
+  margin-left: 24%;
 margin-bottom: 20px;
 margin-top: 20px;
 cursor: pointer;
@@ -58,7 +59,7 @@ line-height: 19px;
 color: #FFFFFF;;
   }
   
- .sign_up .defaultButton:disabled {
+ .sign_up .defaultButtons:disabled {
     cursor: not-allowed;
   }
  .sign_up  h3{
@@ -96,9 +97,13 @@ color: #FFFFFF;;
     .sign_up  input {
         margin-left: 2%;
     }
+
+    .sign_up .msgs {
+      margin-left: 20%;
+    }
   
-    .sign_up .defaultButton {
-      margin-left: 15%;
+    .sign_up .defaultButtons {
+      margin-left: 18%;
     margin-bottom: 10px;
     margin-top: 15px;
     cursor: pointer;
@@ -127,7 +132,7 @@ color: #FFFFFF;;
       }
     .sign_up h3 {
       margin-left: 0;
-      padding-left: 18%;
+      padding-left: 20%;
     }
   }
   
