--- a/src/Components/Category.css
+++ b/src/Components/Category.css
@@ -47,8 +47,9 @@
           font-size: 18px;
           font-style: normal;
           color: #191919;
-          text-align: center;
+          /* text-align: center; */
           margin-bottom: 10px;
+          margin-left: 30%;
         }
   
         h3 {
@@ -103,6 +104,7 @@
       
       h5 {
         padding-bottom: 5px;
+        margin-left: 22%;
       }
       
           
