--- a/src/Components/Category.css
+++ b/src/Components/Category.css
@@ -47,9 +47,9 @@
           font-size: 18px;
           font-style: normal;
           color: #191919;
-          /* text-align: center; */
+          text-align: center !important;
           margin-bottom: 10px;
-          margin-left: 30%;
+          /* margin-left: 30%; */
         }
   
         h3 {
@@ -104,7 +104,8 @@
       
       h5 {
         padding-bottom: 5px;
-        margin-left: 22%;
+        /* margin-left: 22%; */
+        text-align: center !important;
       }
       
           
