--- a/src/Extra-files/Products.css
+++ b/src/Extra-files/Products.css
@@ -29,6 +29,7 @@
         font-style: normal;
         color: #191919;
         text-align: center;
+        /* margin-left: 30%; */
         height: 100px;
       }
 
