--- a/src/Components/Contact.css
+++ b/src/Components/Contact.css
@@ -21,6 +21,11 @@
     display: none;
 }
 
+.fa-phone-alt {
+    color: #b22d31 !important;
+    
+}
+
 .footer p {
     font-family: 'Poppins';
     font-weight: 400;
@@ -169,7 +174,7 @@ ul.subscribe {
     @media only screen and (max-width: 600px) {
 
         .footer {
-            margin-top: 50px;
+            margin-top: 10px;
             padding: 10px 28px 0px 29px;
         }
     
