--- a/src/Pages/SignUp.css
+++ b/src/Pages/SignUp.css
@@ -70,6 +70,7 @@ color: #FFFFFF;;
   line-height: 17px;
   color: #191919;
   padding-left: 150px;
+  padding-top: 20px;
   }
   .sign_up h3 .link {
     color: #B22D31;
