--- a/src/Components/Sidebar.css
+++ b/src/Components/Sidebar.css
@@ -162,7 +162,7 @@ a.nav-link {
     color: #191919;
     padding-left: 120px;
     
-    padding-top: 300px;
+    padding-top: 250px;
   }
   
  .loginh3 .link {
@@ -185,7 +185,7 @@ a.nav-link {
     color: #191919;
     padding-left: 150px;
     /* margin-top: 100px; */
-    padding-top: 420px;
+    padding-top: 450px;
   }
   
  .signuph3 .link {
@@ -283,7 +283,7 @@ a.nav-link {
     color: #191919;
     padding-left: 40px;
   
-    padding-top: 150px;
+    padding-top: 180px !important;
   }
 
     a.link2 .nav-link.dropdown-toggle:before {
