--- a/src/Components/Slider.css
+++ b/src/Components/Slider.css
@@ -9,15 +9,14 @@
     border: 1px solid #fff4f5;
     border-radius: 0 0 32px 32px;
     margin-left: 0px;
-    
     overflow: hidden;
-    padding: 70px 3px 20px 3px;
+    padding: 0px 3px 30px 3px;
     width: 100%;
 }
 
 .sec_section .banner img {
     width: 100%;
-    margin-top: 3% !important;
+    margin-top: 60px !important;
     border: 1px solid transparent;
     border-radius: 32px;
     height: 64vh;
