--- a/src/Extra-files/FavProd.css
+++ b/src/Extra-files/FavProd.css
@@ -5,27 +5,23 @@
   float: left;
   padding-bottom: 3%;
 }
-   figure {
+   .figureProdfav {
       background: #FFFFFF;
       box-shadow: 0px 4px 19px rgb(0 0 0 / 7%);
       border-radius: 24px;
       height: 216px;
-      padding: 30px 0px 19px 0px;
-      width: 120px !important;
+      padding: 30px 0px 0px 0px;
+      width: 200px !important;
       text-align: center;
     }
-figure:hover{
 
-        box-shadow: 0px 5px 22px rgb(17 17 18 / 7%);
-        border-radius: 24px;
-        background: white;
-      }
       
-figure img {
+.figureProdfav img {
         vertical-align: middle;
         border-style: none;
         padding: 11px 10px;
-        width: 120px;
+        width: 150px;
+        position: relative;
         object-fit: contain;
       }
       
@@ -34,7 +30,7 @@ figure img {
         font-size: 18px;
         font-style: normal;
         color: #191919;
-        text-align: center;
+        text-align: center !important;
         height: 100px;
       }
 
@@ -53,11 +49,14 @@ figure img {
         text-decoration: none;
       }
       
-
-figure img {
+.remove {
+  color: white;
+  background-color: #b22d31;
+  border-radius: 32px;
+}
+.figureProdfav img {
         height: 155px;
         z-index: 9;
-        position: relative;
         width: 120px;
       }
 
@@ -73,25 +72,26 @@ figure img {
           flex: 0 0 50%;
           max-width: 50% !important;
       }
- figure {
+ .figureProdfav {
             height: 158px;
             background: #FFFFFF;
             box-shadow: 0px 4px 10px rgb(0 0 0 / 7%);
             margin:0;
             padding: 0;
             border-radius: 24px;
+            width: 170px !important;
             text-align: center;
         }
         
         h5{
-          height: 150px;
+          height: 50px;
         }
     
-  figure img {
+  .figureProdfav img {
             height: 108px;
             z-index: 9;
             position: relative;
-            width: 100px !important;
+            width: 150px !important;
         }
         
       }
