--- a/src/Extra-files/Products.css
+++ b/src/Extra-files/Products.css
@@ -14,6 +14,47 @@
       width: 250px !important;
       text-align: center;
     }
+    .enterotp .defaultButtonoall{
+      margin-left: 0%;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    cursor: pointer;
+    height: 50px;
+    width: 70%;
+    border: #B22D31;
+    background: #B22D31;
+    border-radius: 39px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 19px;
+    color: #FFFFFF;
+      }
+      
+    .loginh3all{
+      font-family: 'Inter';
+      font-style: normal;
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 17px;
+      color: #191919;
+      padding-left: 0px;
+      
+      padding-top: 250px;
+    }
+    
+   .loginh3all .link {
+      color: #B22D31;
+      border: none;
+      background-color: transparent;
+    }
+    
+  .loginh3all .link a{
+      font-weight: bold;
+      text-align: center;
+    }
+  
       
 .figureProd img {
         vertical-align: middle;
@@ -33,7 +74,7 @@
         height: 40px;
       }
 
-      h3 {
+      .prodID {
          color: white;
          font-size: 1px;
       }
@@ -88,6 +129,18 @@
           flex: 0 0 50%;
           max-width: 50% !important;
       }
+      .loginh3all{
+        font-family: 'Inter';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 17px;
+        color: #191919;
+        padding-left: 0px;
+        
+        padding-top: 180px;
+      }
+      
       .figureProd .like {
         border-radius: 50% !important;
         background-color: transparent;
