--- a/src/Pages/FavouriteProducts.css
+++ b/src/Pages/FavouriteProducts.css
@@ -5,39 +5,16 @@
 
 
 .fav_section h4 {
-  margin: 80px 20px 30px 20px;
+  margin: 40px 20px 10px 20px;
   font-family: 'Poppins';
   font-weight: 600;
   color: #191919;
-  margin: 13% 20px 30px;
+  /* margin: 13% 20px 30px; */
   text-align: center;
 }
 
 
 
-.fav_section figure {
-  background: #FFFFFF;
-  box-shadow: 0px 4px 19px rgb(0 0 0 / 7%);
-  border-radius: 24px;
-  height: 210px !important;
-  padding: 30px 0px 0px 0px;
-  width: 250px !important;
-  text-align: center;
-}
-
-.fav_section figure:hover{
-  border-radius: 24px;
-  background: white;
-}
-
-.fav_section figure img {
-  vertical-align: middle;
-  border-style: none;
-  padding: 11px 0px;
-  width: 120px !important;
-  height: 150px !important;
-  object-fit: contain;
-}
 
 a {
   color: #191919 !important;
@@ -48,36 +25,17 @@ a:hover {
   text-decoration: none;
 }
 
-.fav_section figure img {
-  height: 155px;
-  z-index: 9;
-  position: relative;
-  width: 120px;
-  height: 150px;
-}
 
 
 @media only screen and (max-width: 600px) {
   .fav_section {
-      padding: 0px 23px;
+      padding: 0px ;
   }
 
-  .fav_section figure {
-      height: 180px;
-      padding: 28px 0px 30px 0px;
-      width: 150px !important;
-  }
-
-
-  .fav_section figure img {
-      height: 108px;
-      z-index: 9;
-      position: relative;
-      width: 100px !important;
-  }
+ 
   .fav_section h4 {
     text-align: center;
-    margin-top: 100px;
+    margin-top: 20px;
   }
 }
 
