--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -1,4 +1,43 @@
 .home {
     display: block;
 }
+.btndiv {
+ margin-left: 20px;
+    background-color: #fff4f5;
+}
+.prevBtn{
+    border-radius: 50%;
+    background-color: #B22D31;
+    color: white;
+    border: none;
+    margin-top: 80px;
+  margin-right: 1150px;
+}
 
+.nextBtn {
+    border-radius: 50%;
+    background-color: #B22D31;
+    color: white;
+    border: none;
+    margin-top: 80px;
+
+}
+
+@media only screen and (max-width: 600px) {
+    .btndiv {
+        background-color: white;
+        margin-top: 10px;
+       margin-left: 0px;
+       padding: 0%;
+    }
+
+    .prevBtn{
+        border-radius: 50%;
+        background-color: #B22D31;
+        color: white;
+        border: none;
+        margin-top: 80px;
+      margin-right: 250px;
+    }
+    
+}
