--- a/src/Pages/Terms&Conditions.css
+++ b/src/Pages/Terms&Conditions.css
@@ -5,7 +5,7 @@
 }
 
 .tandc .tandch2{
-    color: #a52a2a;
+  
     margin-top: 40px;
     margin-left: 50px;
     font-family: 'Poppins';
@@ -14,7 +14,7 @@
    
 }
 .tandc .tandch3 {
-    text-align: center;
+    text-align: justify;
     margin-left: 50px;
     margin-top: 30px;
     padding: 5px 50px;
