--- a/src/Pages/SingleProduct.css
+++ b/src/Pages/SingleProduct.css
@@ -1,3 +1,7 @@
+.singleProd{
+  width: 100%;
+}
+
 .swiper {
   width: 100%;
   height: 100%;
@@ -7,7 +11,7 @@
   background-color: black !important;
 }
 
-hr{
+.singleProd hr{
  background-color: transparent;
 }
 
@@ -46,7 +50,7 @@ hr{
   width: 100%;
   height: 100%;
 }
-.pro_detail{
+.singleProd .pro_detail{
   /* height: 300px; */
   text-align: justify;
   font-weight: 500px;
@@ -212,8 +216,9 @@ margin-bottom: 0% !important;
 }
 .producttitle{
   text-transform: uppercase;
-  text-align: right;
-  margin-right: 200px;
+  text-align: justify;
+  margin-left: 400px;
+  /* margin-right: 200px; */
 }
 
 .buton_lst li{
@@ -233,8 +238,14 @@ margin-bottom: 0% !important;
 .newclass .product-slider .swiper-button-next:after,
 .newclass .product-slider .swiper-button-prev:after {
     font-size: 20px;
-    color: #000;
+    color: black;
     font-weight: bold;
+}
+.singleProd .swiper-button-next, .singleProd .swiper-button-prev{
+  
+  border: none;
+  border-radius: 50%;
+  font-weight: bolder;
 }
 .slider_txt{
   padding: 0% 6% 4% 2%;
@@ -253,6 +264,33 @@ margin-bottom: 0% !important;
       text-align: center;
       padding: 50px 40px 40px 40px;
   }
+  .like2 {
+    border-radius: 50% !important;
+    background-color: transparent;
+    margin-left: 10px !important;
+    /* padding-bottom: 10px; */
+    position: absolute;
+    z-index: 99;
+    right: 15%;
+    top: 2%;
+    border: 1px solid white;
+
+}
+ .like2 .likebutton2 {
+    padding-top: 8px;
+    background-color: black;
+    border: 1px solid white !important;
+    border-radius: 50%;
+    vertical-align: middle;
+}
+
+ .like2 .likebutton2 .fa-heart {
+    display: inline-block;
+    font: normal normal normal 14px/1 FontAwesome;
+    font-size: inherit;
+    text-rendering: auto;
+    -webkit-font-smoothing: antialiased;
+}
 
   @media all and (max-width: 767px) {
 
