--- a/src/Components/Sidebar.css
+++ b/src/Components/Sidebar.css
@@ -31,6 +31,8 @@
 nav .fa-search {
     border: none;
     background-color: transparent;
+    margin: 0%;
+    padding: 0%;
 }
 
 nav .container-fluid {
@@ -255,9 +257,12 @@ a.nav-link {
         margin-right: 20px;
 
     }
+
     .loginbuttona{
-        margin: 0 !important;
+        margin: 0% !important;
+        /* padding-left: 5px !important; */
         font-weight: 600;
+        
     }
     
     .a {
@@ -610,4 +615,70 @@ a.nav-link {
 
 }
 
+@media (min-width: 1000px) and (max-width: 1100px) {
+    .loginbuttona{
+        margin-left: 30px;
+      
+    }
+   
+}
 
+@media (min-width: 300px) and (max-width: 500px) {
+
+
+    .fa-search {
+        margin-left: 100% !important;
+    }
+
+    .fa-close{
+        margin-left: 100% !important;
+    }
+}
+
+@media (min-width: 600px) and (max-width: 900px) {
+    
+    .loginbuttona{
+        margin-left: 40% !important;
+        margin-top: 5px !important;
+    }
+}
+
+
+@media (min-width: 900px) and (max-width: 1000px) {
+    
+    .loginbuttona{
+        margin-left: 40% !important;
+        margin-top: 5px !important;
+    }
+}
+
+
+@media (min-width: 500px) and (max-width: 600px) {
+    
+    .loginbuttona{
+        margin-left: 20% !important;
+        
+    }
+
+    .fa-search {
+        margin-left: 100% !important;
+    }
+
+    .fa-close{
+        margin-left: 100% !important;
+    }
+}
+
+@media (min-width: 200px) and (max-width: 300px) {
+    .loginbuttona{
+        margin-right: 10% !important;
+        
+    }
+    .fa-search {
+        margin-left: 170% !important;
+    }
+
+    .fa-close{
+        margin-left: 170% !important;
+    }
+}
