--- a/src/Components/Slider.css
+++ b/src/Components/Slider.css
@@ -16,7 +16,7 @@
 
 .sec_section .banner img {
     width: 100%;
-    margin-top: 60px !important;
+    margin-top: 95px !important;
     border: 1px solid transparent;
     border-radius: 32px;
     height: 64vh;
@@ -36,6 +36,7 @@
 .sec_section .banner .swiper-button-next:after, .sec_section .banner .swiper-button-prev:after{
     font-size: 28px;
     color: #fff;
+    margin-top: 100px;
 }
 
 .swiper-pagination-bullets{
@@ -52,7 +53,7 @@ color: #fff !important;
 }
 @media only screen and (max-width: 600px) {
     .sec_section .banner img {
-        margin-top: 30px !important;
+        margin-top: 87px !important;
         height: 41vh;
         width: 100%;
         object-fit: fill;
@@ -69,6 +70,7 @@ color: #fff !important;
         font-size: 28px;
         color: #fff;
         width: 100%;
+     
     }
 }
 
